[package]
name = "uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
bincode = "=1.3.3"
tokio = { version = "1.39.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.11", features = ["json"] }
rusqlite = "0.37.0"
solana-address = { version = "1.0.0", features = ["serde", "decode"] }
serde = "1.0.227"
serde_json = "1.0.145"
eyre = "0.6.12"
rayon = "1.11.0"
num_cpus = "1.17.0"
